--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- FONtS -->
     <!-- Titulo -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Me Dicen Beto - Fotografo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
