--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
     <!-- Titulo -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
     <title>Me Dicen Beto - Fotografo</title>
+
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Cormorant+Infant:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
