--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Arimo&family=Cormorant+Infant:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
+    <style>
+      body{
+        margin: 0;
+        padding: 0;
+      }
+
+    </style>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
