--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- FONtS -->
     <!-- Titulo -->
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
